# wei-upload

./: Cargo.toml  README.md  wei-upload.service
src/: main.rs
