[package]
name = "wei-upload"
version = "0.1.0"
edition = "2021"
description = "wei upload"
documentation = "https://github.com/zuiyue-com/wei-upload"
homepage = "https://github.com/zuiyue-com/wei-upload"
license = "MIT OR Apache-2.0"

[dependencies]
axum = { version = "0.6", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"